# rust-graph-db

./: .gitignore  CHANGELOG.md  Cargo.toml  DEV_LOG.md  DOCUMENTATION_ANALYSIS.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  PERFORMANCE_COMPARISON_REPORT.md  PERFORMANCE_TESTING_PROGRESS.md  README.md  RUST_VS_CPP_ANALYSIS.md  SET_BUG_FIX_SUMMARY.md  SOCIAL_NETWORK_API.md  TEST_LOG.md  TEST_REPORT.md  WITH_CLAUSE_IMPLEMENTATION.md
benches/: graph_ops.rs  query_ops.rs
benchmark_results/analysis/: analysis_data.json  analysis_report.md
benchmark_results/concurrent/: mixed_4threads.json  read_16threads.json  read_1threads.json  read_4threads.json  read_8threads.json  write_4threads.json
benchmark_results/rust/: graph_ops_20260131_235853.txt  query_ops_20260131_235955.txt
charts/: charts_text.txt
examples/: algorithms_demo.rs  basic_usage.rs  executor_demo.rs  import_export_demo.rs  storage_demo.rs
scripts/: analyze_results.py  generate_charts.py  run_all_benchmarks.sh  run_concurrent_bench.sh  run_cpp_bench.sh  run_rust_bench.sh  setup_test_data.sh
social-network-api/: .env.example  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
social-network-api/examples/: demo.sh
social-network-api/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  utils.rs
social-network-api/src/handlers/: health.rs  mod.rs  post.rs  social.rs  user.rs
social-network-api/src/models/: mod.rs  post.rs  social.rs  user.rs
social-network-api/src/repository/: mod.rs  post.rs  social_graph.rs  user.rs
social-network-api/src/services/: content.rs  mod.rs  social_graph.rs  user.rs
social-network-api/tests/: integration_test.rs
src/: lib.rs
src/algorithms/: mod.rs  parallel.rs  shortest_path.rs  vle.rs
src/executor/: create_executor.rs  delete_executor.rs  match_executor.rs  mod.rs  set_executor.rs
src/jsonb/: mod.rs
src/parser/: ast.rs  builder.rs  cypher.pest  mod.rs
src/storage/: error.rs  mod.rs  rocksdb_store.rs  transaction.rs
src/tools/: export.rs  import.rs  mod.rs
src/types/: edge.rs  graphid.rs  mod.rs  path.rs  vertex.rs
tests/: integration_test.rs  test_optional_match.rs  test_set_nested_integration.rs  test_with_clause.rs
tools/: concurrent_bench.rs  data_generator.rs
