[workspace]
members = [".", "social-network-api"]
resolver = "2"

[package]
name = "rust-graph-db"
version = "0.1.0"
edition = "2021"
authors = ["openGauss-graph Team"]

[dependencies]
# Phase 1: Core types and JSONB
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# Phase 2: Storage engine
rocksdb = "0.22"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1.11"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Phase 3: Cypher parser
pest = "2.7"
pest_derive = "2.7"

# Phase 5: Graph algorithms
petgraph = "0.6"
pathfinding = "4.9"

# Phase 6: Import/Export tools
csv = "1.3"

# Performance testing tools
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
parking_lot = "0.12"

# Phase 6+: To be enabled later
# datafusion = "52.1"
# arrow = "57.2"
# rayon = "1.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.10"

[[bench]]
name = "graph_ops"
harness = false

[[bench]]
name = "query_ops"
harness = false

[[bin]]
name = "data_generator"
path = "tools/data_generator.rs"

[[bin]]
name = "concurrent_bench"
path = "tools/concurrent_bench.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
