[package]
name = "social-network-api"
version = "0.1.0"
edition = "2021"
authors = ["openGauss-graph Team"]

[dependencies]
# Graph database
rust-graph-db = { path = ".." }

# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Async
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"

[[bin]]
name = "social-network-api"
path = "src/main.rs"

[lib]
name = "social_network_api"
path = "src/lib.rs"
